--- a/admin/index.html
+++ b/admin/index.html
@@ -61,7 +61,7 @@
 				<v-btn 
 					flat 
 					color="white"
-					@click="to_login_page"
+					@click="toLoginPage"
 					style="text-decoration:underline">
 					重新登录
 				</v-btn>
@@ -93,6 +93,7 @@
 			</v-layout>
 		</v-footer>
  	</div>
-	<script type="text/javascript" src="js/init.js"></script>
+ 	<script type="text/javascript" src="dist/jquery.min.js"></script>
+ 	<script type="text/javascript" src="conf/config.js"></script>
 </body>
 </html>
