--- a/admin/index.html
+++ b/admin/index.html
@@ -22,7 +22,7 @@
 	    >
 	      <v-list dense>
 	      	<v-subheader class="mt-3 grey--text text--darken-1">SUBSCRIPTIONS</v-subheader>
-	        <v-list-tile v-for="item in index.menu" :key="item.text" @click="drawer_router(item.router)">
+	        <v-list-tile v-for="item in index.menu" :key="item.text" @click="drawerRouter(item.router)">
 	          <v-list-tile-action>
 	            <v-icon>{{ item.icon }}</v-icon>
 	          </v-list-tile-action>
