完善前端架构

--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -80,14 +80,14 @@
 				</v-flex>
 				<v-flex xs4>
 					<v-alert
-						v-model="global.common.controllers.leaves.alert.show"
+						v-model="global.common.utils.models.alert.show"
 						dismissible
 						transition="scale-transition"
 						type="warning"
 						color="green"
 						outline
 						>
-						{{global.common.controllers.leaves.alert.message}}
+						{{global.common.utils.models.alert.message}}
 					</v-alert>
 				</v-flex>
 			</v-layout>
